--- a/fullStackFinal/src/app/app.component.html
+++ b/fullStackFinal/src/app/app.component.html
@@ -1,27 +1,37 @@
-<!-- Toolbar -->
-<mat-toolbar color="primary" class="header">
-  <div>player Records</div>
-  <span class="nav-tool-items">
-    <mat-icon (click)="sidenav.toggle()" class="hamburger">menu</mat-icon>
-  </span>
-</mat-toolbar>
+<div class=mcenter>
+  <!-- Toolbar -->
+  <mat-toolbar class="header">
+    <div class=textheader>player Records</div>
+    <span class="nav-tool-items">
+      <mat-icon (click)="sidenav.toggle()" class="hamburger">menu</mat-icon>
+    </span>
+  </mat-toolbar>
 
-<mat-sidenav-container>
-  <!-- Sidenav -->
-  <mat-sidenav #sidenav [mode]="isBiggerScreen() ? 'over' : 'side'" [(opened)]="opened" [fixedInViewport]="true"
-    [fixedTopGap]>
-    <mat-nav-list>
-      <a mat-list-item routerLinkActive="active" routerLink="/add-player">
-        <mat-icon>add</mat-icon> Add player
-      </a>
-      <a mat-list-item routerLinkActive="active" routerLink="/players-list">
-        <mat-icon>format_list_bulleted</mat-icon> View players
-      </a>
-    </mat-nav-list>
-  </mat-sidenav>
+  <mat-sidenav-container>
+    <!-- Sidenav -->
+    <mat-sidenav #sidenav [mode]="isBiggerScreen() ? 'over' : 'side'" [(opened)]="opened" [fixedInViewport]="true"
+      [fixedTopGap]>
+      <mat-nav-list>
+        <a mat-list-item routerLinkActive="active" routerLink="/add-player">
+          <div class="mnuebtn">
+            <mat-icon>add</mat-icon>
+          </div>
+          <div class="mnuebtn"></div>
+          <div class="mnuebtn"> Add player</div>
+        </a>
+        <a mat-list-item routerLinkActive="active" routerLink="/players-list">
+          <div class="mnuebtn">
+            <mat-icon>format_list_bulleted</mat-icon>
+          </div>
+          <div class="mnuebtn"> View players</div>
+        </a>
 
-  <!-- Main content -->
-  <mat-sidenav-content>
-    <router-outlet></router-outlet>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+      </mat-nav-list>
+    </mat-sidenav>
+
+    <!-- Main content -->
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
