--- a/fullStackFinal/src/app/components/edit-player/edit-player.component.html
+++ b/fullStackFinal/src/app/components/edit-player/edit-player.component.html
@@ -1,6 +1,6 @@
 <!-- Title group  -->
 <div class="title-group">
-  <h1 class="mat-h1">Add Player</h1>
+  <h1 class="mat-h1">Edit Player</h1>
   <mat-divider fxFlex="1 0"></mat-divider>
 </div>
 
@@ -9,84 +9,75 @@
   <form [formGroup]="playerForm" (ngSubmit)="updatePlayerForm()" #resetPlayerForm="ngForm" novalidate>
     <!-- Left block -->
     <mat-card>
-      <div class="controlers-wrapper">
-        <!-- Name -->
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Player name" formControlName="player_name">
-          <mat-error *ngIf="handleError('player_name', 'required')">
-            You must provide a<strong>player name</strong>
-          </mat-error>
-        </mat-form-field>
+      <div class="keepCenter">
+        <div class="controlers-wrapper">
+          <!-- Name -->
+          <mat-form-field class="example-full-width">
+            <input matInput placeholder="Player :" formControlName="player_name">
+            <mat-error *ngIf="handleError('player_name', 'required')">
+              You must provide a <strong>player name</strong>
+            </mat-error>
+          </mat-form-field>
+          <!-- Rank -->
+          <mat-form-field>
+            <mat-label>Rank :</mat-label>
+            <mat-select [(value)]="selected" formControlName="player_rank">
+              <mat-option [value]="sectioinArray" *ngFor="let sectioinArray of SectioinArray_rank">{{sectioinArray}}
+              </mat-option>
+            </mat-select>
+            <mat-error *ngIf="handleError('player_rank', 'required')">
+              Rank is required
+            </mat-error>
+          </mat-form-field>
 
-        <!-- Email -->
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Player email" formControlName="player_email">
-          <mat-error *ngIf="handleError('player_email', 'required')">
-            You must provide a<strong>player email</strong>
-          </mat-error>
-        </mat-form-field>
+          <!-- Score -->
+          <mat-form-field class="example-full-width">
+            <input matInput placeholder="Score :" formControlName="player_score">
+            <mat-error *ngIf="handleError('player_score', 'required')">
+              You must provide a <strong>Score</strong>
+            </mat-error>
+          </mat-form-field>
 
-        <!-- Section -->
-        <mat-form-field>
-          <mat-label>Section</mat-label>
-          <mat-select [(value)]="selected" formControlName="section">
-            <mat-option [value]="sectioinArray" *ngFor="let sectioinArray of SectioinArray">{{sectioinArray}}
-            </mat-option>
-          </mat-select>
-          <mat-error *ngIf="handleError('section', 'required')">
-            Section is required
-          </mat-error>
-        </mat-form-field>
-      </div>
-    </mat-card>
+          <!-- Time -->
+          <mat-form-field class="example-full-width">
+            <input matInput placeholder="Time :" formControlName="player_time">
+            <mat-error *ngIf="handleError('player_time', 'required')">
+              You must provide a <strong>Time</strong>
+            </mat-error>
+          </mat-form-field>
 
-    <!-- Right block -->
-    <mat-card>
-      <div class="controlers-wrapper">
-        <!-- Add subjects -->
-        <mat-form-field class="multiple-items">
-          <mat-chip-list #chipList>
-            <mat-chip *ngFor="let subjectArray of subjectArray" [selectable]="selectable" [removable]="removable"
-              (removed)="remove(subjectArray)">
-              {{subjectArray.name}}
-              <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-            </mat-chip>
-            <input placeholder="Add subject" [matChipInputFor]="chipList"
-              [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
-              (matChipInputTokenEnd)="add($event)">
-          </mat-chip-list>
-          <i class="material-icons tooltip-info" matTooltip="Enter subject name and press enter to add subjects">
-            info
-          </i>
-        </mat-form-field>
+          <!-- Favorite Game -->
+          <mat-form-field>
+            <mat-label>Favorite Game :</mat-label>
+            <mat-select [(value)]="selected" formControlName="player_favgame">
+              <mat-option [value]="sectioinArray" *ngFor="let sectioinArray of SectioinArray_favgame">{{sectioinArray}}
+              </mat-option>
+            </mat-select>
+            <mat-error *ngIf="handleError('player_favgame', 'required')">
+              Favorite Game is required
+            </mat-error>
+          </mat-form-field>
 
-        <!-- Date of birth -->
-        <mat-form-field>
-          <input matInput readonly [matDatepicker]="picker" placeholder="Date of birth" formControlName="dob"
-            (dateChange)="formatDate($event)">
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-          <mat-error *ngIf="handleError('dob', 'required')">
-            Date of birth is required
-          </mat-error>
-        </mat-form-field>
-
-        <!-- Gender -->
-        <div class="misc-bottom-padding">
-          <mat-label>Gender:</mat-label>
-          <mat-radio-group aria-label="Select an option" formControlName="gender">
-            <mat-radio-button value="Male">Male</mat-radio-button>
-            <mat-radio-button value="Female">Female</mat-radio-button>
-          </mat-radio-group>
+          <!-- Status -->
+          <mat-form-field>
+            <mat-label>Status :</mat-label>
+            <mat-select [(value)]="selected" formControlName="player_status">
+              <mat-option [value]="sectioinArray" *ngFor="let sectioinArray of SectioinArray_status">{{sectioinArray}}
+              </mat-option>
+            </mat-select>
+            <mat-error *ngIf="handleError('player_status', 'required')">
+              Status is required
+            </mat-error>
+          </mat-form-field>
         </div>
-      </div>
-    </mat-card>
 
-    <!-- Submit & Reset -->
-    <mat-card>
-      <div class="full-wrapper button-wrapper">
-        <div class="button-wrapper">
-          <button mat-flat-button color="warn">Update</button>
+
+
+        <!-- Submit & Reset -->
+        <div class="full-wrapper button-wrapper">
+          <div class="button-wrapper">
+            <button mat-flat-button color="warn">Update</button>
+          </div>
         </div>
       </div>
     </mat-card>
