--- a/fullStackFinal/src/app/components/players-list/players-list.component.html
+++ b/fullStackFinal/src/app/components/players-list/players-list.component.html
@@ -7,41 +7,55 @@
 <p *ngIf="PlayerData.length <= 0" class="no-data">There is no player added yet!</p>
 
 <div class="container" *ngIf="PlayerData.length > 0">
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource">
-      <ng-container matColumnDef="_id">
-        <th mat-header-cell *matHeaderCellDef> player ID </th>
-        <td mat-cell *matCellDef="let element"> {{element._id}} </td>
-      </ng-container>
+  <div class="keepCenter">
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource">
 
-      <ng-container matColumnDef="player_name">
-        <th mat-header-cell *matHeaderCellDef> player Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.player_name}} </td>
-      </ng-container>
 
-      <ng-container matColumnDef="player_email">
-        <th mat-header-cell *matHeaderCellDef> Email </th>
-        <td mat-cell *matCellDef="let element"> {{element.player_email}} </td>
-      </ng-container>
+        <ng-container matColumnDef="player_name">
+          <th mat-header-cell *matHeaderCellDef> Player </th>
+          <td mat-cell *matCellDef="let element"> {{element.player_name}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="section">
-        <th mat-header-cell *matHeaderCellDef> Section </th>
-        <td mat-cell *matCellDef="let element"> {{element.section}} </td>
-      </ng-container>
+        <ng-container matColumnDef="player_rank">
+          <th mat-header-cell *matHeaderCellDef> Rank </th>
+          <td mat-cell *matCellDef="let element"> {{element.player_rank}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let element; let i = index;">
-          <button mat-raised-button color="primary" class="push-right"
-            [routerLink]="['/edit-player/', element._id]">Edit</button>
-          <button mat-raised-button color="accent" (click)="deletePlayer(i, element)">Delete</button>
-        </td>
-      </ng-container>
+        <ng-container matColumnDef="player_score">
+          <th mat-header-cell *matHeaderCellDef> Score </th>
+          <td mat-cell *matCellDef="let element"> {{element.player_score}} </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+        <ng-container matColumnDef="player_time">
+          <th mat-header-cell *matHeaderCellDef> Time </th>
+          <td mat-cell *matCellDef="let element"> {{element.player_time}} </td>
+        </ng-container>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        <ng-container matColumnDef="player_favgame">
+          <th mat-header-cell *matHeaderCellDef> Game Played </th>
+          <td mat-cell *matCellDef="let element"> {{element.player_favgame}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="player_status">
+          <th mat-header-cell *matHeaderCellDef> Status </th>
+          <td mat-cell *matCellDef="let element"> {{element.player_status}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef> Action </th>
+          <td mat-cell *matCellDef="let element; let i = index;">
+            <button mat-raised-button color="warn" class="push-right"
+              [routerLink]="['/edit-player/', element._id]">Edit</button>
+            <button mat-raised-button color="warn" (click)="deletePlayer(i, element)">Delete</button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+
+      <mat-paginator class='Tfooter' [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons></mat-paginator>
+    </div>
   </div>
 </div>
