--- a/fullStackFinal/src/app/components/players-list/players-list.component.html
+++ b/fullStackFinal/src/app/components/players-list/players-list.component.html
@@ -1,6 +1,6 @@
 <!-- Title group  -->
 <div class="title-group">
-  <h1 class="mat-h1">Players List</h1>
+  <h1 class="mat-h1">Player List</h1>
   <mat-divider fxFlex="1 0"></mat-divider>
 </div>
 
@@ -44,8 +44,9 @@
 
         <ng-container matColumnDef="player_status">
           <th mat-header-cell *matHeaderCellDef> Status </th>
-          <td mat-cell *matCellDef="let element"> {{element.player_status}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.player_status ? 'Available' : 'UnAvailable'}} </td>
         </ng-container>
+
 
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef> Action </th>
